@@ -23,9 +23,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <release>9</release>
                     <source>9</source>
                     <target>9</target>
+                    <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <argLine>--add-modules=jdk.incubator.httpclient</argLine>
                 </configuration>
             </plugin>
 
